[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://scenes/Player Model.tscn" type="PackedScene" id=2]
[ext_resource path="res://import/sounds/generic/Bullet Fire.ogg" type="AudioStream" id=3]
[ext_resource path="res://import/sounds/generic/Explode.ogg" type="AudioStream" id=4]
[ext_resource path="res://scenes/Gun Model.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/RocketLauncher Model.tscn" type="PackedScene" id=6]
[ext_resource path="res://import/sounds/generic/Rocket Fire.ogg" type="AudioStream" id=7]
[ext_resource path="res://import/sounds/generic/Metal Hit 4.ogg" type="AudioStream" id=8]
[ext_resource path="res://import/sounds/generic/Metal Hit.ogg" type="AudioStream" id=9]
[ext_resource path="res://import/sounds/generic/Metal Hit 3.ogg" type="AudioStream" id=10]
[ext_resource path="res://import/sounds/generic/Metal Hit 2.ogg" type="AudioStream" id=11]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 1, 1.84151 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="SphereMesh" id=5]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="SphereMesh" id=2]

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1.25, 0, 0, 0, 1, 0, 0.353592, 0 )
shape = SubResource( 1 )

[node name="Model" parent="CollisionShape" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 0.8, 0, 8.74228e-08, 0, -1, -0.113065, -0.968128, 0.545563 )

[node name="Right Gun" parent="CollisionShape" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 0.8, 0, 0, 0, 1, 0.429037, 0.42908, -0.99436 )
visible = false

[node name="Left Gun" parent="CollisionShape" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 0.8, 0, 0, 0, 1, -0.414966, 0.429, -0.994 )
visible = false

[node name="RocketLauncher" parent="CollisionShape" instance=ExtResource( 6 )]
transform = Transform( 0.353531, -0.923756, -0.147276, 0.74721, 0.271962, 0.0878291, -0.0513489, -0.176371, 0.982984, 2.09717, -0.89873, 0.749004 )
visible = false

[node name="Firepoint" type="Spatial" parent="CollisionShape/RocketLauncher"]
transform = Transform( 0.996081, -0.0172482, 0.0867613, 0.0367554, 0.972833, -0.228574, -0.0804617, 0.230867, 0.969654, -0.20364, 4.1979, -0.450939 )

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape/RocketLauncher/Firepoint"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0.157259 )
visible = false
material_overlay = SubResource( 4 )
mesh = SubResource( 5 )

[node name="Firepoint2" type="Spatial" parent="CollisionShape/RocketLauncher"]
transform = Transform( 0.996081, -0.0172482, 0.0867613, 0.0367554, 0.972833, -0.228574, -0.0804617, 0.230867, 0.969654, 0.0965534, 4.20898, -0.475187 )

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape/RocketLauncher/Firepoint2"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0.157259 )
visible = false
material_overlay = SubResource( 4 )
mesh = SubResource( 5 )

[node name="Firepoint3" type="Spatial" parent="CollisionShape/RocketLauncher"]
transform = Transform( 0.996081, -0.0172482, 0.0867613, 0.0367554, 0.972833, -0.228574, -0.0804617, 0.230867, 0.969654, -0.199159, 3.94522, -0.510901 )

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape/RocketLauncher/Firepoint3"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0.157259 )
visible = false
material_overlay = SubResource( 4 )
mesh = SubResource( 5 )

[node name="Firepoint4" type="Spatial" parent="CollisionShape/RocketLauncher"]
transform = Transform( 0.996081, -0.0172482, 0.0867613, 0.0367554, 0.972833, -0.228574, -0.0804617, 0.230867, 0.969654, 0.101034, 3.9563, -0.535152 )

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape/RocketLauncher/Firepoint4"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0.157259 )
visible = false
material_overlay = SubResource( 4 )
mesh = SubResource( 5 )

[node name="RocketLauncher2" parent="CollisionShape" instance=ExtResource( 6 )]
transform = Transform( 0.350727, 0.926263, 0.137943, -0.748551, 0.27245, 0.0737714, 0.0384362, -0.161414, 0.986138, -2.17903, -0.88606, 0.707111 )
visible = false

[node name="Firepoint" type="Spatial" parent="CollisionShape/RocketLauncher2"]
transform = Transform( 0.99608, -0.0172482, 0.0867613, 0.0367554, 0.972833, -0.228574, -0.0804616, 0.230867, 0.969653, -0.177723, 4.20222, -0.450027 )

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape/RocketLauncher2/Firepoint"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0.157259 )
visible = false
material_overlay = SubResource( 4 )
mesh = SubResource( 5 )

[node name="Firepoint2" type="Spatial" parent="CollisionShape/RocketLauncher2"]
transform = Transform( 0.99608, -0.0172482, 0.0867613, 0.0367554, 0.972833, -0.228574, -0.0804616, 0.230867, 0.969653, 0.122469, 4.2133, -0.474275 )

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape/RocketLauncher2/Firepoint2"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0.157259 )
visible = false
material_overlay = SubResource( 4 )
mesh = SubResource( 5 )

[node name="Firepoint3" type="Spatial" parent="CollisionShape/RocketLauncher2"]
transform = Transform( 0.99608, -0.0172482, 0.0867613, 0.0367554, 0.972833, -0.228574, -0.0804616, 0.230867, 0.969653, -0.173243, 3.94954, -0.509989 )

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape/RocketLauncher2/Firepoint3"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0.157259 )
visible = false
material_overlay = SubResource( 4 )
mesh = SubResource( 5 )

[node name="Firepoint4" type="Spatial" parent="CollisionShape/RocketLauncher2"]
transform = Transform( 0.99608, -0.0172482, 0.0867613, 0.0367554, 0.972833, -0.228574, -0.0804616, 0.230867, 0.969653, 0.126951, 3.96062, -0.53424 )

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape/RocketLauncher2/Firepoint4"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0.157259 )
visible = false
material_overlay = SubResource( 4 )
mesh = SubResource( 5 )

[node name="Firepoint" type="Spatial" parent="CollisionShape"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0172292, 0.4, -2.368 )

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape/Firepoint"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0.157259 )
visible = false
material_overlay = SubResource( 3 )
mesh = SubResource( 2 )

[node name="Firepoint2" type="Spatial" parent="CollisionShape"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.395881, 0.4, -2.368 )

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape/Firepoint2"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0.157259 )
visible = false
material_overlay = SubResource( 3 )
mesh = SubResource( 2 )

[node name="Firepoint3" type="Spatial" parent="CollisionShape"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.444119, 0.4, -2.368 )

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape/Firepoint3"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0.157259 )
visible = false
material_overlay = SubResource( 3 )
mesh = SubResource( 2 )

[node name="Sounds" type="Spatial" parent="."]

[node name="Fire Sound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 3 )

[node name="Fire Rocket Sound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 7 )

[node name="Explode Sound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 4 )

[node name="Hit Sound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 9 )

[node name="Hit Sound2" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 11 )

[node name="Hit Sound3" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 10 )

[node name="Hit Sound4" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 8 )
